[package]
name = "mc-auth"
version = "0.1.0"
edition = "2021"
default-run = "mc-auth"

[workspace]
members = [".", "prisma-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tower = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = [
    "env-filter",
] }
axum = { version = "*", features = ["tracing"] }
serde = { version = "*", features = ["derive"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "main", features = [
    "migrations",
    "postgresql",
] }
anyhow = "*"
tower-http = { version = "*", features = ["trace"] }
thiserror = "*"
uuid = { version = "*", features = ["v4", "fast-rng"] }
base64 = "*"
rsa = "*"
sha1 = "*"
sha2 = "*"
idgenerator = "*"
config = { version = "*", features = ["toml"] }
better-panic = "*"
color-backtrace = "*"
rand = "*"
chrono = "*"
toml = "*"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
codegen-units = 1
