[package]
name = "mc-auth"
version = "0.1.0"
edition = "2021"
default-run = "mc-auth"

[workspace]
members = [".", "prisma-cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tower = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = [
    "env-filter",
] }
axum = { version = "*", features = ["tracing"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "a643effbd978deb0de8b2d637069aaa124d0332f", features = [
    "migrations",
    "postgresql",
] }
anyhow = "*"
tower-http = { version = "*", features = ["trace"] }
thiserror = "*"
uuid = { version = "*", features = ["v4", "fast-rng"] }
base64 = "*"
rsa = { version = "*" }
sha1 = { version = "*", features = ["oid"] }
sha2 = "*"
idgenerator = "*"
config = { version = "*", features = ["toml"] }
better-panic = "*"
color-backtrace = "*"
rand = "*"
chrono = "*"
toml = "*"
tokio-postgres = "0.7.10"

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
codegen-units = 1

[profile.dev.package.num-bigint-dig]
opt-level = 3

[patch.'https://crates.io/crates/tokio-postgres']
tokio-postgres = "0.7.10"
